improving top tab

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
         <!-- Top Tab -->
         <div id="topTab" class="tab-content hidden">
-            <div id="leaderboard">
-                <h3>Top Patters</h3>
-                <ol id="leaderboardList"></ol>
+            <div id="leaderboard" class="bg-gray-800 rounded-lg p-6 mx-auto max-w-md">
+                <h2 class="text-2xl font-bold mb-4 text-white">Top Patters</h2>
+                <ol id="leaderboardList" class="space-y-2"></ol>
             </div>
         </div>
 
