fix leadearboard present in other places

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- Current user ranking will be inserted here -->
             </div>
             
-            <div id="totalHolders" class="text-blue-400 text-lg mb-4">
+            <div id="totalHolders" class="text-blue-400 text-lg mb-4 text-center">
                 <!-- Total holders count will be inserted here -->
             </div>
             
