--- a/index.html
+++ b/index.html
@@ -110,17 +110,19 @@
 
         <!-- Pats Tab -->
         <div id="patsTab" class="tab-content hidden">
-            <h2>Get More Pats</h2>
-            <button id="buyPatsBtn" class="bg-blue-500 text-white p-2 rounded">Buy Pats</button>
-            <button id="shareTwitterBtn" class="bg-blue-400 text-white p-2 rounded mt-2">Share on Twitter</button>
-            <button id="inviteFriendBtn" class="bg-green-500 text-white p-2 rounded mt-2">Invite a Friend</button>
+            <h2 class="text-2xl font-bold mb-6 text-center">Get More Pats</h2>
+            <div class="flex flex-col items-center space-y-4">
+                <button id="buyPatsBtn" class="bg-blue-500 text-white p-2 rounded w-64">Buy Pats</button>
+                <button id="shareTwitterBtn" class="bg-blue-400 text-white p-2 rounded w-64">Share on Twitter</button>
+                <button id="inviteFriendBtn" class="bg-green-500 text-white p-2 rounded w-64">Invite a Friend</button>
+            </div>
         </div>
 
         <!-- Top Tab -->
         <div id="topTab" class="tab-content hidden">
             <h1 class="text-3xl font-bold mb-6 text-center text-white">Top Tappers</h1>
             
-            <div id="currentUserRank">
+            <div id="currentUserRank" class="mb-4">
                 <!-- Current user ranking will be inserted here -->
             </div>
             
@@ -137,12 +139,12 @@
 
         <!-- User Tab -->
         <div id="userTab" class="tab-content hidden">
-            <div id="userProfile">
-                <h3>Your Profile</h3>
-                <p>Welcome, <span id="userName"></span>!</p>
-                <p>Total Pats: <span id="userPatCount">0</span></p>
-                <p>Available Pats: <span id="availablePats">0</span></p>
-                <p>Streak: <span id="userStreak">0</span> days</p>
+            <div id="userProfile" class="p-4 bg-gray-800 rounded-lg">
+                <h3 class="text-2xl font-bold mb-4 text-center">Your Profile</h3>
+                <p class="mb-2">Welcome, <span id="userName" class="font-bold"></span>!</p>
+                <p class="mb-2">Total Pats: <span id="userPatCount" class="font-bold">0</span></p>
+                <p class="mb-2">Available Pats: <span id="userAvailablePats" class="font-bold">0</span></p>
+                <p class="mb-2">Streak: <span id="userStreak" class="font-bold">0</span> days</p>
             </div>
         </div>
     </div>
