trying to improve User Profile Tab and added UserTab.js

--- a/index.html
+++ b/index.html
@@ -146,13 +146,7 @@
 
         <!-- User Tab -->
         <div id="userTab" class="tab-content hidden">
-            <div id="userProfile">
-                <h3>Your Profile</h3>
-                <p>Welcome, <span id="userName"></span>!</p>
-                <p>Total Pats: <span id="userPatCount">0</span></p>
-                <p>Available Pats: <span id="availablePats">0</span></p>
-                <p>Streak: <span id="userStreak">0</span> days</p>
-            </div>
+            <div id="reactUserTab"></div>
         </div>
     </div>
 
