try to fic loading screen block

--- a/index.html
+++ b/index.html
@@ -178,11 +178,12 @@
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js" type="module"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database.js" type="module"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage.js" type="module"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
     
-    <script type="module" src="app.js"></script>
+    <script src="buyPats.js"></script>
+    <script src="app.js"></script>
     <script>
         console.log("HTML file loaded and executed.");
     </script>
