--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div id="catContainer" class="mb-6 relative">
-                <img alt="Cat of Today" class="w-full rounded-lg">
+                <img src="cat-image.png" alt="Cat of Today" class="w-full rounded-lg">
                 <button id="patMe" class="absolute bottom-4 left-1/2 transform -translate-x-1/2 bg-blue-500 text-white px-4 py-2 rounded-full text-sm flex items-center hover:bg-blue-600 transition-colors">
                     <span class="mr-1">👋</span> Pat me!
                 </button>
@@ -177,13 +177,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
-    
-    <script src="buyPats.js"></script>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         console.log("HTML file loaded and executed.");
     </script>
