--- a/index.html
+++ b/index.html
@@ -12,17 +12,10 @@
 </head>
 <body class="main-content">
     <div id="loadingOverlay" class="loading-overlay">
-        <div class="cat-loader">
-            <div class="cat-ear left"></div>
-            <div class="cat-ear right"></div>
-            <div class="cat-face">
-                <div class="cat-eye left"></div>
-                <div class="cat-eye right"></div>
-            </div>
-        </div>
         <div class="loading-text">Warming up the cat...</div>
-        <div class="cat-fact cat-fact-loading">
-            Did you know? Cats can make over 100 different sounds, while dogs can only make about 10.
+        <div class="progress-container">
+            <div class="progress-bar"></div>
+            <div class="cat-tail"></div>
         </div>
     </div>
     <div id="content" class="flex-grow overflow-y-auto">
