--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="loading-text">Warming up the cat...</div>
         <div class="progress-container">
             <div class="progress-bar"></div>
+            <div class="cat-tail"></div>
         </div>
     </div>
     <div id="content" class="flex-grow overflow-y-auto">
