--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Cat of Today</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.min.css">
 
 </head>
@@ -88,7 +88,7 @@
     </div>
 
     <!-- Tab Navigation -->
-    <div id="tabNavigation" class="tab-navigation">
+    <div id="tabNavigation">
         <button class="tab-button" data-tab="homeTab">
             <span class="text-2xl mb-1">🏠</span>
             <span>Home</span>
