--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
     <div id="app">
         <sl-drawer label="Loading" id="loadingOverlay" class="loading-overlay" open>
+          <div class="loading-content">
+            <sl-spinner></sl-spinner>
             <div class="loading-text">Warming up the cat...</div>
             <sl-progress-bar id="loadingProgress"></sl-progress-bar>
+          </div>
         </sl-drawer>
 
         <div id="content" class="flex-grow overflow-y-auto">
