--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="content" class="flex-grow overflow-y-auto">
         <!-- Home Tab -->
         <div id="homeTab" class="tab-content">
-            <h1 class="title">Cat of Today</h1>
+            <!-- title less <h1 class="title">Cat of Today</h1> --> 
             <div class="flex justify-center space-x-4 mb-6">
                 <div class="global-pat-count">
                     <span>Global Pat Count:</span>
