--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     /* Set the background image */
     body {
-      background-image: url('https://sleghazbpzgynnzriozz.supabase.co/storage/v1/object/sign/images/backgrounds/background1.png?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1cmwiOiJpbWFnZXMvYmFja2dyb3VuZHMvYmFja2dyb3VuZDEucG5nIiwiaWF0IjoxNzI1ODk2ODQ0LCJleHAiOjIwNDEyNTY4NDR9.peCGUUBNs5pqwqbtAeqwH9H5sDQ8v-ViPjc04TM61jU');
+      background-image: url('https://sleghazbpzgynnzriozz.supabase.co/storage/v1/object/public/images/backgrounds/background3.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
