--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
     <!-- Your custom JavaScript file -->
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 
 
 </body>
