reverting to when the navigation was working

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 </div>
             </div>
 
-            <div class="pats-counter">Pats: <span id="pat-count"></span></div>
+            <div class="pats-counter">Pats: <span id="pat-count">281</span></div>
             <div class="circular-container">
                 <div class="ring"></div>
                 <div class="cat-image floating"></div>
