trying connection supabase

--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
 
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span>
+                <div id="userName"></div>
             </div>
 
             
@@ -547,6 +548,7 @@
 
     <!-- Supabase SDK: Keep this in your HTML file -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- Your custom JavaScript file -->
     <script src="app.js"></script>
