--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span>
-                <div id="userName"></div>
+                Username: <span id="userName"></span>
             </div>
 
             
