--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- Your custom JavaScript file -->
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 
 
 </body>
