--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="sparkles"></div>
 
-    <nav>
+    <nav class="bottom-nav">
         <a href="#" class="nav-item active" data-screen="home">Home</a>
         <a href="#" class="nav-item" data-screen="pats">Pats</a>
         <a href="#" class="nav-item" data-screen="ranks">Ranks</a>
