trying to fix navigation bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="progress-labels">
-                    <span class="progress-left">Global Pats: <span id="global-pats-count">5000</span></span>
+                    <span class="progress-left">Global Pats: <span id="global-pats-count"></span></span>
                     <span class="progress-right">Goal: <span id="global-pats-goal">5000</span></span>
                 </div>
             </div>
@@ -66,10 +66,10 @@
 
             <h2 id="more-pats" class="section-title">More Pats</h2>
             <div class="pats-options">
-                <p>Daily Reward</p>
-                <p>Like and RT a post</p>
-                <p>Invite a friend</p>
-                <p>Buy Pats</p>
+                <button id="dailyRewardBtn" class="pats-option">Daily Reward</button>
+                <button class="pats-option">Like and RT a post</button>
+                <button class="pats-option">Invite a friend</button>
+                <button class="pats-option">Buy Pats</button>
             </div>
         </div>
     </div>
