--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <div id="profile" class="screen">
         <div class="profile-info">
             <h2>User Profile</h2>
-            <p>Username: <span id="profile-username">CatLover123</span></p>
-            <p>Total Pats: <span id="profile-total-pats">281</span></p>
-            <p>Available Pats: <span id="profile-available-pats">200</span></p>
-            <p>Streak: <span id="profile-streak">5</span> days</p>
+            <p>Username: <span id="profile-username">Username</span></p>
+            <p>Total Pats: <span id="profile-total-pats">0</span></p>
+            <p>Available Pats: <span id="profile-available-pats">0</span></p>
+            <p>Streak: <span id="profile-streak">0</span> days</p>
         </div>
     </div>
 
