--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span> 
                 Username: <span id="userName"></span>
+                <button id="clicker">Click me</button>
+                <p>Clicks: <span id="clicks-count">0</span></p>
             </div>
 
             <div class="global-pats-progress">
@@ -52,10 +54,10 @@
     <div id="profile" class="screen">
         <div class="profile-info">
             <h2>User Profile</h2>
-            <p>Username: <span id="profile-username">Username</span></p>
-            <p>Total Pats: <span id="profile-total-pats">0</span></p>
-            <p>Available Pats: <span id="profile-available-pats">0</span></p>
-            <p>Streak: <span id="profile-streak">0</span> days</p>
+            <p>Username: <span id="profile-username"></span></p>
+            <p>Total Pats: <span id="profile-total-pats"></span></p>
+            <p>Available Pats: <span id="profile-available-pats"></span></p>
+            <p>Streak: <span id="profile-streak"></span> days</p>
         </div>
     </div>
 
@@ -91,6 +93,8 @@
             <div>[Insert user ranking list here]</div>
         </div>
     </div>
+
+    <div class="sparkles"></div>
 
     <nav class="bottom-nav">
         <a href="#" class="nav-item active" data-screen="home">Home</a>
