--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="progress-labels">
-                    <span class="progress-left">Global Pats: <span id="global-pats-count">0</span></span>
+                    <span class="progress-left">Global Pats: <span id="clicks-count">0</span></span>
                     <span class="progress-right">Goal: <span id="global-pats-goal">50000</span></span>
                 </div>
             </div>
