--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span> 
                 Username: <span id="userName"></span>
+
+            <!--
                 <button id="clicker">Click me</button>
                 <p>Clicks: <span id="clicks-count">0</span></p>
+            -->
+
             </div>
 
             <div class="global-pats-progress">
@@ -36,8 +40,9 @@
             </div>
 
             <div class="circular-container">
-                <div class="ring"></div>
-                <div class="cat-image floating"></div>
+                <button id="clicker" class="ring">
+                    <div class="cat-image floating"></div>
+                </button>
             </div>
 
             <div class="action-buttons">
