--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Time left: <span id="countdown">24:00:00</span> 
                 Username: <span id="userName"></span>
 
-            <!--
+                <!--
                 <button id="clicker">Click me</button>
                 <p>Clicks: <span id="clicks-count">0</span></p>
             -->
@@ -39,11 +39,11 @@
                 Pats: <span id="pat-count">0</span>
             </div>
 
-            <div class="circular-container">
-                <button id="clicker" class="ring">
-                    <div class="cat-image floating"></div>
-                </button>
+            <div id="clicker" class="circular-container">
+                <div class="ring"></div>
+                <div class="cat-image floating"></div>
             </div>
+
 
             <div class="action-buttons">
                 <div class="pats-left">
