--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <div class="container">
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span> 
-                Username: <span id="userName"></span>
+                Welcome <span id="userName"></span>
 
                 <!--
                 <button id="clicker">Click me</button>
                 <p>Clicks: <span id="clicks-count">0</span></p>
-            -->
+                -->
 
             </div>
 
