--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Time left: <span id="countdown">24:00:00</span> 
             </div>
             <div class="welcome-username">
-                Welcome back2 <span id="userName"></span>
+                Welcome back3 <span id="userName"></span>
             </div>
 
             <div class="global-pats-progress">
@@ -32,7 +32,7 @@
             </div>
 
             <div class="pats-counter">
-                Pats: <span id="pat-count">0</span>
+                Pats: <span id="pat-count">...</span>
             </div>
 
             <div id="clicker" class="circular-container">
@@ -43,7 +43,7 @@
 
             <div class="action-buttons">
                 <div class="pats-left">
-                    Pats Left: <span id="pats-left">281</span>
+                    Pats Left: <span id="pats-left">...</span>
                 </div>
                 <div class="multiplier">
                     Multiplier: <span id="multiplier">x1</span>
