--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Time left: <span id="countdown">24:00:00</span> 
             </div>
             <div class="welcome-username">
-                Welcome back1 <span id="userName"></span>
+                Welcome back2 <span id="userName"></span>
             </div>
 
             <div class="global-pats-progress">
@@ -88,10 +88,12 @@
     <div id="ranks" class="screen">
         <div class="ranks-info">
             <h2>Your Rank</h2>
-            <p>[Insert user's current rank here]</p>
+            <p id="user-rank">Loading...</p>
 
             <h2>User Ranking</h2>
-            <div>[Insert user ranking list here]</div>
+            <div id="user-ranking-list">
+                <p>Loading ranking list...</p>
+            </div>
         </div>
     </div>
 
