--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Time left: <span id="countdown">24:00:00</span> 
             </div>
             <div class="welcome-username">
-                Welcome back3 <span id="userName"></span>
+                Welcome <span id="userName"></span>
             </div>
 
             <div class="global-pats-progress">
