--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div class="countdown-timer">
                 Time left: <span id="countdown">24:00:00</span> 
             </div>
+            <button id="theme-toggle" class="theme-toggle">Toggle Night Mode</button>
+
             <div class="welcome-username">
                 Welcome back <span id="userName"></span>
             </div>
