--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
     <div id="home" class="screen active">
         <div class="container">
-            <div class="countdown-timer">
-                Time left: <span id="countdown">24:00:00</span> 
-            </div>
-            <button id="theme-toggle" class="theme-toggle">&#9790;</button>
             <div class="welcome-username">
                 Welcome back <span id="userName"></span>
             </div>
-
+            <div class="countdown-timer">
+                Time left: <span id="countdown">--:--:--</span> 
+            </div>
+            <button id="theme-toggle" class="theme-toggle">&#9790;</button>
             <div class="global-pats-progress">
                 <div class="progress-bar-container">
                     <div class="progress-bar">
