--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Welcome back <span id="userName"></span>
             </div>
             <div class="countdown-timer">
-                Time left: <span id="countdown">--:--:--</span> 
+                Time left: <span id="countdown"> :  :  </span> 
             </div>
             <button id="theme-toggle" class="theme-toggle">&#9790;</button>
             <div class="global-pats-progress">
