trying to bring everything a bit up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Welcome back <span id="userName"></span>
             </div>
             <div class="countdown-timer">
-                Time left <span id="countdown">  _ : _ : _  </span> 
+                Time left <span id="countdown">  __ : __ : __  </span> 
             </div>
             <button id="theme-toggle" class="theme-toggle">&#9790;</button>
             <div class="global-pats-progress">
