addig payment from button in app

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <button id="dailyRewardBtn" class="pats-option">Daily Reward</button>
                 <button class="pats-option">Like and RT a post</button>
                 <button class="pats-option">Invite a friend</button>
-                <button class="pats-option">Buy Pats</button>
+                <button id="buyPatsBtn" class="pats-option">Buy Pats</button>
             </div>
         </div>
     </div>
